src/test/ui/borrowck/borrowck-uninit.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/borrowck-uninit.rs:5:9
   |
LL |     let x: isize;
   |         - binding declared here but left uninitialized
LL |     foo(x);
   |         ^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x: isize = 0;
   |                  +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
